--- a/parentapp/src/pages/parent/parent.html
+++ b/parentapp/src/pages/parent/parent.html
@@ -12,7 +12,7 @@
             <ion-icon name="add"></ion-icon>
           </button>
         </ion-buttons>
-    <ion-title>parent</ion-title>
+    <ion-title>Parent Page</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -22,18 +22,31 @@
   <ion-list *ngFor="let child of childlist">
       <ion-item>
         <ion-avatar item-start>
-          <img src="">
+          <img src="assets/imgs/child.JPG">
         </ion-avatar>
-        <h2> {{child.name}} </h2>
-        <h3>Don't Know What To Do</h3>
-        <p>I've had a pretty messed up day. If we just...</p>
+        <h2 class="name"> {{child.name}} </h2>
+        <h4>My Child</h4>
+        <p>I will send My Location soon ......</p>
       </ion-item>
     </ion-list>
     <ion-list *ngFor="let location of locationlist">
       <ion-item>
-        <h2> {{location.latitude}} </h2>
-        <h2> {{location.longitude}} </h2>
-        
+        <!-- <h2> {{location.latitude}} </h2>
+        <h2> {{location.longitude}} </h2> -->
+        <ion-row>
+          <ion-col text-center>
+            <p> Hello My Father My Location is </p>
+            <agm-map
+                  [latitude]="location.latitude"
+                  [longitude]="location.longitude"
+                  [zoom]="15">
+                  <agm-marker
+                  [latitude]="location.latitude"
+                  [longitude]="location.longitude" >
+                </agm-marker>
+            </agm-map>
+          </ion-col>
+        </ion-row>
       </ion-item>
     </ion-list>
 </ion-content>
