--- a/childapp/src/pages/child/faculty.html
+++ b/childapp/src/pages/child/faculty.html
@@ -6,14 +6,25 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>child</ion-title>
+  <ion-navbar color="dark">
+    <ion-title text-center>Child App</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+    <ion-list *ngFor="let child of childlist">
+        <ion-item>
+          <ion-avatar item-start class= "item-avatar" text-center>
+            <img src="assets/imgs/child.JPG">
+          </ion-avatar>
+        </ion-item>
+        <ion-item text-center>
+            <h2 class="name text-bold"> I'm {{child.name}} </h2>
+            <p>My Current Gps's</p>
+        </ion-item>
+      </ion-list>
   <ion-grid>
     <ion-row>
       <ion-col col-6>
@@ -33,8 +44,8 @@
     </ion-row>
     <ion-row>
       <ion-col text-center>
-        <h2 *ngIf="!locationset"> choose location </h2>
-        <h2 *ngIf="locationset"> your location is </h2>
+        <!-- <h2 *ngIf="!locationset"> choose location </h2> -->
+        <!-- <h2 *ngIf="locationset"> your location is </h2> -->
         <agm-map 
               *ngIf="locationset"
               [latitude]="baselocation.latitude"
