Finished GeoLocation but not the tracker

--- a/childapp/src/pages/child/faculty.html
+++ b/childapp/src/pages/child/faculty.html
@@ -28,17 +28,17 @@
   <ion-grid>
     <ion-row>
       <ion-col col-6>
-        <button ion-button block  outline icon-left (click)="getlocation()">
+        <button ion-button block  outline icon-left (click)="getCurrentLocation()">
           <ion-icon name="locate">
           </ion-icon>
-          my location
+          My Location
         </button>
       </ion-col>
       <ion-col col-6>
           <button ion-button block  outline icon-left (click)="setonmap()">
             <ion-icon name="map">
             </ion-icon>
-            use map
+            Manual map
           </button>
         </ion-col>
     </ion-row>
